fix: remaining html error and contrast issue removed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
     font-family: palyfair, sans-serif;
     text-transform: capitalize;
     letter-spacing: 3px;
-    color: #02afd0;
+    color: #2B2F31;
     font-size: 250%;
 }
 
@@ -24,7 +24,7 @@ body {
     font-family: oswald, sans-serif;
     font-size: 150%;
     letter-spacing: 3px;
-    color: #3a3a3a;
+    color: #2B2F31;
 }
 
 /* header section */
@@ -32,7 +32,7 @@ body {
 #logo {
     float: left;
     font-size: 280%;
-    color: #02afd0;
+    color: #2B2F31;
     margin-left: 20px;
 
 }
@@ -66,15 +66,15 @@ body {
 
 .menu a {
     text-decoration: none;
-    color: #02afd0;
+    color: #2B2F31;
 }
 
 .menu a:hover {
-    border-bottom: 1px solid #02afd0;
+    border-bottom: 1px solid #2B2F31;
 }
 
 .active {
-    border-bottom: 1px solid #02afd0;
+    border-bottom: 1px solid #2B2F31;
 }
 
 /* Hero-image */
@@ -116,7 +116,7 @@ body {
     padding-top: 40px;
     padding-left: 20px;
 
-    background-color: rgba(75, 152, 233, 0.7);
+    background-color: rgba(75, 152, 233, 0.9);
 
     bottom: 30px;
     right: 150px;
@@ -130,7 +130,7 @@ body {
     height: 500px;
     width: 100%;
     margin: 0 auto;
-    border: 1px solid #3a3a3a;
+    border: 1px solid #2B2F31;
     padding-top: 40px;
     margin-bottom: 20px;
 
@@ -153,7 +153,7 @@ p {
 span {
     font-weight: 300;
     font-size: 145%;
-    color: #02afd0;
+    color: #2B2F31;
 }
 
 hr {
@@ -217,7 +217,7 @@ hr {
 
 .text {
     font-family: oswald, sans-serif;
-    background-color: #02afd0;
+    background-color: #2B2F31;
     color: white;
     font-size: 16px;
     padding: 15px 30px;
@@ -250,7 +250,7 @@ hr {
 
 #signup h2 {
     text-align: center;
-    color: #02afd0;
+    color: #2B2F31;
 }
 
 .input-field {
@@ -261,11 +261,11 @@ hr {
 
 .icon {
     padding: 10px;
-    background: #02afd0;
+    background: #2B2F31;
     color: white;
     min-width: 50px;
     text-align: center;
-    border: 1px solid #02afd0;
+    border: 1px solid #2B2F31;
 }
 
 .input-inner {
@@ -283,12 +283,12 @@ hr {
     font-family: playfair, sans-serif;
     font-weight: bold;
     font-size: 18px;
-    background: rgba(255, 255, 0, 0.5);
+    background: yellow;
     padding: 10px;
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
-    color: #02afd0;
+    color: #2B2F31;
     border-radius: 5px;
     cursor: pointer;
     -webkit-transition-duration: 0.3s;
@@ -300,15 +300,13 @@ hr {
 .button:hover,
 .button:focus,
 .button:active {
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-    -webkit-transform: scale(1.1);
-    transform: scale (1.1);
+    box-shadow: 0 0 20px #2B2F31;
 }
 
 /* footer section */
 footer {
     height: 150px;
-    background: rgba(255, 255, 0, 0.5);
+    background: yellow;
     margin-top: 20px;
 
 }
@@ -325,14 +323,14 @@ footer {
 .social-media a {
     font-size: 160%;
     margin: 1%;
-    color: #02afd0;
+    color: #2B2F31;
     text-decoration: none;
     letter-spacing: 3px;
     font-family: oswald, sans-serif;
 }
 
 .social-media a:hover {
-    border-bottom: 1px solid #02afd0;
+    border-bottom: 1px solid #2B2F31;
 }
 
 /* article and headings*/
@@ -343,7 +341,7 @@ footer {
 }
 
 .blog-content {
-    border: 2px solid #02afd0;
+    border: 2px solid #2B2F31;
     padding: 75px 70px;
     width: 50%;
     margin: 0 auto;
